syntax = "proto3";

import "base_types.proto";

package message;


enum feature_t {
    no_feature = 0;
    bats = 1;
    sb = 2;
    min = 3;
    maj = 4;
    capital = 5;
}

// nations messages
message capital_hex_zone_t
{
    string name = 1;
    repeated feature_t features = 2 [packed=true];
}

message capital_hex_t
{
    int32 coord = 1;
    repeated capital_hex_zone_t zones = 2;
}

message capital_t
{
    repeated capital_hex_t hexes = 1;
}

message offmap_possesions_t
{
    int32 provinces = 1;
    int32 mins = 2;
    int32 majs = 3;
    int32 survey_ships = 4;
    bool cannot_build_offmap_capital = 5;
    bool old_shipyard = 6;
}

message nation_t
{
    string name = 1;
    string short_name = 2;
    capital_t capital = 3;
    int32 free_strategic_moves = 4;
    int32 capital_star_points = 5;
    offmap_possesions_t offmap_possesions = 6;
    int32 nation_id = 7;
}

message nations_t
{
    map<string, nation_t> nations = 1;
}

// Map messages
message hex_t
{
    hex_coord_t coord = 1;
    int32 owner = 2;
    feature_t feature = 3;
    repeated int32 neutral_zone_bordering = 4 [packed=true];
}

message province_hex_t
{
    int32 hex = 1;
    feature_t feature = 2;
}

message province_t
{
    repeated province_hex_t hexes = 1;
}

// How the offmap region (if any) is connected to the map.
message offmap_area_t
{
    string name = 1;
    repeated feature_t features = 2 [packed=true];
    int32 counter_hex = 3; // Where the SB counter is chown, if any.
    repeated int32 adjacent_hexes = 4 [packed=true];
}

message starting_national_holdings_t
{
    repeated province_t provinces = 1;
    offmap_area_t offmap_area = 2;
}

message map_t
{
    int32 width = 1;
    int32 height = 2;
    repeated int32 nz_planets = 3 [packed=true]; // only in starting data (all planets are MIN)
    repeated int32 nz_hexes = 4 [packed=true];   // only in starting data
    map<string, starting_national_holdings_t> starting_national_holdings = 5;
    repeated hex_t hexes = 6; // only in saved data
}

// Game model (as in Model-View-Controller)
message model_t
{
    nations_t nations = 1;
    map_t map = 2;
}

// Order of Battle messages
message oob_unit_t
{
    string unit = 1;
    int32 times = 2; // "times: 2", "times: 3", etc. -- omission implies x1
}

// TODO: year,season -> turn_t
message production_element_t
{
    int32 year = 1;
    season_t season = 2;
    repeated oob_unit_t units = 3;
}

// TODO: year,season -> turn_t
message starting_fleet_t
{
    repeated int32 hexes = 1 [packed=true]; // empty indicates offmap
    repeated oob_unit_t units = 2;
    bool reserve = 3;
    repeated production_element_t prewar_construction = 4;
    int32 strategic_move_arrival_year = 5;
    season_t strategic_move_arrival_season = 6;
    map<int32, int32> hex_placement_limits = 7; // hex coord to unit limit
}

message mothball_reserve_t
{
    repeated oob_unit_t units = 1;
    repeated oob_unit_t war_release = 2;
    repeated oob_unit_t limited_war_release = 3;
}

// TODO Special production rules
// TODO Production notes
message order_of_battle_t
{
    map<string, starting_fleet_t> starting_fleets = 1;
    mothball_reserve_t mothball_reserve = 2;
    repeated production_element_t production = 3;
}

message orders_of_battle_t
{
    map<string, order_of_battle_t> oobs = 1;
}


// units
message unit_def_side_t
{
    float att = 1;
    float def = 2;
    bool scout = 3;
    float fighters = 4;
    float heavy_fighter_bonus = 5;
    int32 pfs = 6;
    int32 drones = 7;
    bool mauler = 8;
    repeated tug_mission_t tug_missions = 9;
}

message towable_t
{
    int32 move_cost = 1;
    int32 strat_move_limit = 2;
}

message production_cost_t
{
    int32 cost = 1;
    int32 fighter_cost = 2;
}

message unit_def_t
{
    string name = 1;
    int32 cmd = 2;
    unit_def_side_t uncrippled = 3;
    unit_def_side_t crippled = 4;
    escort_type_t escort_type = 5;
    turn_t available = 6;
    bool pod = 7;
    int32 max_in_service = 8;
    production_cost_t construction = 9;
    map<string, production_cost_t> substitutions = 10;
    map<string, production_cost_t> conversions = 11;
    int32 move = 12;
    carrier_type_t carrier_type = 13;
    bool not_spaceworthy = 14;
    towable_t towable = 15;
    int32 salvage = 16;
    string notes = 17;
}

message nation_unit_defs_t
{
    repeated unit_def_t units = 1;
}

message unit_defs_t
{
    map<string, nation_unit_defs_t> nation_units = 1;
}

message team_t
{
    string name = 1;
    repeated string nations = 2;
}

message scenario_condition_t
{
    enum action_t {
        occupies = 0;
        destroys = 1;
    };

    enum object_type_t {
        hexes = 0;
        sb = 1;
        fleet_area = 2;
        nation = 3;
    }

    message object_t
    {
        object_type_t type = 1;
        repeated string names = 2;
        repeated int32 hexes = 3;
    }

    repeated string actors = 1;
    action_t action = 2;
    repeated object_t one_of = 3;
};

message fleet_release_condition_t
{
    string fleet = 1;
    scenario_condition_t condition = 2;
};

message war_entry_condition_t
{
    war_footing_t economy = 3;
    scenario_condition_t condition = 2;
}

message scenario_turn_t
{
    message national_action_t
    {
        enum action_type_t {
            release_fleets = 0;
            declare_war = 1;
        }

        message action_t
        {
            action_type_t type = 1;
            repeated string names = 2;
        }

        repeated action_t actions = 1;
    }

    int32 turn = 1;
    map<string, national_action_t> national_actions = 2;
}

message scenario_t
{
    message nation_t
    {
        repeated string at_war_with = 1;
        repeated string future_belligerents = 2;
        war_footing_t economy = 3;
        int32 exhaustion_turns = 4;
        bool accumulate_exhaustion_at_peace = 5;
        repeated fleet_release_condition_t release_conditions = 6;
        repeated war_entry_condition_t war_entry_conditions = 7;
    }

    string name = 1;
    string description = 2;
    turn_t start_turn = 3;
    repeated team_t teams = 4;
    repeated string team_turn_order = 5;
    string map = 6;
    string order_of_battle = 7;
    repeated string setup_order = 8;
    map<string, scenario_t.nation_t> nations = 9;
    repeated scenario_turn_t turns = 10;
}
